@@ -91,10 +91,13 @@ function attributesFromErr (err) {
         continue
       case 'object':
         // Ignore all objects except Dates.
-        if (typeof val.toISOString !== 'function') {
+        if (typeof val.toISOString !== 'function' || typeof val.getTime !== 'function') {
           continue
+        } else if (Number.isNaN(val.getTime())) {
+          val = 'Invalid Date' // calling toISOString() on invalid dates throws
+        } else {
+          val = val.toISOString()
         }
-        val = val.toISOString()
     }
     attrs[key] = val
     n++
@@ -280,5 +283,6 @@ module.exports = {
   createAPMError,
 
   // Exported for testing.
+  attributesFromErr,
   _moduleNameFromFrames
 }
